there is new modificaions in css and html file

--- a/signup.html
+++ b/signup.html
@@ -177,11 +177,19 @@
           Input Button<br/>
           <input type="button" value="Button"><br/><br/>
           Input Checkbox<br/>
-          <input type="checkbox" ><br/><br/>
+          <input type="checkbox" ><br/>
+          <input type="checkbox" ><br/>
+          <input type="checkbox" ><br/>
           Input Password<br/>
           <input type="password"><br/><br/>
-          Input Radio<br/>
-          <input type="radio"><br/><br/>
+          Input Radio<br/><br/>
+          Male<br/>
+          <input type="radio" name="gender" value="male"><br/>
+          Female<br/>
+          <input type="radio" name="gender" value="female"><br/>
+          3<br/>
+          <input type="radio" name="gender" value="3"><br/>
+           
           Input Reset<br/>
           <input type="reset"><br/><br/>
           Input Submit<br/>
