this is new commit

--- a/signup.html
+++ b/signup.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="./css/form.css">
-  <link rel="stylesheet" href="./css/formdata.css">
+  <link rel="stylesheet" href="../css/form.css">
+  <link rel="stylesheet" href="../css/formdata.css">
   <title>SignUp form</title>
 </head>
 <body>
